# FullADDMAX-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
docs/: mcp-configs.md  preview.html
examples/: mapreduce_demo.py  orchestrator_demo.py  parallel_demo.py  swarm_demo.py
examples/mcp-json/: all-chinese-providers.json  chatgpt-box.yi.json  cherry-studio.deepseek.json  cherry-studio.kimi.json  claude-desktop.doubao.json  nextchat.qwen.json  trae.glm.json
scripts/: audit_hive_recursion.py  demo_hive.py  generate_mcp_json_examples.py  install_to_ide.py  simulate_ai_hive_overflow.py  smoke_mega_tools.py  smoke_obsidian.py  smoke_persistent_context.py  smoke_swarm_log.py  smoke_zero_config.py  test_chinese_mcp_hosts.py  test_mcp_json_examples.py  test_panel_ui.py  verify_all_offline.py  verify_env_logging.py  verify_hive_audit_fix.py
src/fulladdmax_mcp/: __init__.py  __main__.py  _install_cli.py  context.py  context_store.py  dispatcher.py  env_autodetect.py  errors.py  i18n.py  llm.py  logging_config.py  mapreduce.py  obsidian.py  orchestrator.py  panel.py  parallel.py  param_parser.py  param_parser_errors.py  rate_limit.py  swarm.py  (+4 more)
tests/: conftest.py  test_context.py  test_context_store.py  test_dispatcher.py  test_function_calling.py  test_hive_run_v07.py  test_install_cli.py  test_llm.py  test_logging_config.py  test_mapreduce.py  test_mega_tools.py  test_obsidian.py  test_orchestrator.py  test_parallel.py  test_server.py  test_swarm.py  test_swarm_log.py  test_swarm_registry.py  test_transport.py  test_usage_and_ratelimit.py
(+5 files in other folders)
